# Forest-Fire

./: .gitignore  README.md  docker-compose.yml  parse_ndwd.py  pyproject.toml  stats_cache.pkl
.streamlit/: config.toml
CoreBackend/: Dockerfile  pom.xml
Frontend/: Dockerfile  Documentation.md  next.config.mjs  package-lock.json  package.json
Model/: cheater.py  check_modis_temporal.py  check_train_fire.py  check_val_fire.py  convlstm_model.py  coordinates.py  data.py  data_utils.py  data_utils_hybrid.py  dataapi.py  debug_leak.py  demdata.py  era5-resample.py  evaluate.py  evaluate_hybrid.py  evaluate_legacy.py  evaluate_seq.py  final-master-merge.py  final-merge.py  final-merge1.py  final-merge2.py  final-merge3.py  generate_model_metrics.py  global_vitality_check.py  gui.py  hybrid_model.py  integrity_check_ds.py  merge-era5.py  model.py  notes-data.md  notes.md  plot_data.py  plot_dem.py  pytorch_gpu_test.py  requirements.txt  resample.py  slavery.py  static_sampler.py  stats_cache.pkl  stats_cache_fi.pkl  (+9 more)
Server/: Dockerfile  docker-compose.yml  requirements.txt
docs/: architecture_decisions.md  backend_dev_guide.md  comprehensive_research_paper.md  conversation_history.md  dataset_comparison_ours_vs_ndws.md  frontend_dev_guide.md  model_comparison_ours_vs_ndws.md  ndws_comparison_analysis.md  ndws_evaluation_plan.md  ndws_implementation_tasks.md  paper1_prediction_dataset.md  paper2_simulation_ca.md  paper3_routing_pathfinding.md  personal_notes.md  project_overview.md  research_paper_draft.md  routing_implementation_guide.md  unified_dashboard_plan.md
(+115 files in other folders)
