[project]
name = "forest-fire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2026.1.2",
    "h5netcdf>=1.8.1",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "rasterio>=1.5.0",
    "rioxarray>=0.20.0",
    "scipy>=1.17.0",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "xarray>=2026.1.0",
]
